# masters_degree_diploma

./: CMakeLists.txt  LSTM_MACROS_AND_BLOCKS.ipynb  README.md  next_command_prediction.ipynb
log_analyzer/InOut/In/: prefics_modules.json
ui/: CMakeLists.txt
ui/cmake/: WinDeployQt.cmake  ncad.cmake
ui/learn_module/: predict_next_command.py  token.pkl  tokenizer.json
ui/src/: Project_m.cpp  StdAfx.h  Widget.cpp  Widget.h  Widget.ui
